--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
+
+jdk:
+  - oraclejdk8
+  - oraclejdk9
+
 sudo: false # faster builds
+
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
