--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,25 @@
+sudo: false # faster builds
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+
+addons:
+  sonarcloud:
+    organization: 'open-source'
+
 language: java
 
 jdk:
   - oraclejdk8
-  - oraclejdk9
 
-sudo: false # faster builds
+install:
+  - 'mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V'
 
+script:
+  - 'mvn test jacoco:report'
+  - 'mvn sonar:sonar'
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - 'bash <(curl -s https://codecov.io/bash)'
