--- a/pom.xml
+++ b/pom.xml
@@ -107,15 +107,19 @@
                         </goals>
                     </execution>
                     <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
+                       <id>report</id>
+                       <goals>
+                           <goal>report</goal>
                         </goals>
+                    <configuration>
+                       <formats>
+                           <format>XML</format>
+                       </formats>
+                     </configuration>
                     </execution>
-                </executions>
-            </plugin>
-            <plugin>
+                    </executions>
+           </plugin>
+           <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <dependencies>
