--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
         <skip.integration.tests>true</skip.integration.tests>
         <skip.unit.tests>false</skip.unit.tests>
     </properties>
+    <properties>
+        <sonar.organization>majjanjua-3</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+     </properties>
 
     <profiles>
         <profile>
